--- a/.github/workflows/sphinx-docs-pages.yml
+++ b/.github/workflows/sphinx-docs-pages.yml
@@ -14,7 +14,12 @@ jobs:
       pages: write
       id-token: write
     steps:
+    - id: configuration
+      uses: sphinx-notes/pages@v3
+      with:
+        publish: false
     - id: deployment
       uses: sphinx-notes/pages@v3
       with:
-        pyproject_extras: "docs"
+        checkout: false
+        publish: true
